[tool.poetry]
name = "rorschach-mask"
version = "0.1.0"
description = ""
authors = ["Dante Devenir <dantedevenir@outlook.com>"]
readme = "README.md"
packages = [
        {include = "components", from = "rorschach_mask"},
        {include = "mapping", from = "rorschach_mask"},
        {include = "utils", from = "rorschach_mask"},
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
toml = "^0.10.2"
nite_howl = "0.1.5"

[[tool.poetry.source]]
name = "nite-howl"
url = "https://pkgs.dev.azure.com/dantedevenir/rorschach/_packaging/nite-howl/pypi/simple"
priority = "supplemental"

[tool.poetry.scripts]
rorschach-mask = "mutation:manhattan"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"
ipykernel = "^6.29.5"
mypy = "^1.11.1"
types-toml = "^0.10.8"
pandas_stubs = "^2.2.2"
types_requests = "^2.32.0"
pylint = "^3.2.6"

[[tool.mypy.overrides]]
module = "toml.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"